syntax = "proto3";

package restaurant;

service RestaurantService {
    rpc checkHealth (Empty) returns (Response) {};
    rpc createRestaurant(RestaurantData) returns (CreateRestaurantRes) {};
    rpc updateBasicDetails(UpdateBasicDetailsReq) returns (Response) {};
    rpc getRestaurantBasicDetails(GetRestaurantBasicDetailsReq) returns (GetRestaurantBasicDetailsRes) {};
    rpc saveRestaurantDetails(SaveRestaurantDetailsReq) returns (Response) {};
    rpc getRestaurantDetails( GetRestaurantDetailsReq ) returns (GetRestaurantDetailsRes) {};
    rpc updateRestaurantDetails(SaveRestaurantDetailsReq) returns (Response) {}; 

}

message Empty {}

message Response {
    required string message = 1;
    required bool status = 2; 
}

message Address {
    bool exactLocation = 1;
    string address = 2;
    double latitude = 3;
    double longitude = 4;
    string country = 5;
    string pinCode = 6;
    string district = 7;
    string state = 8;
}

message AddressTable {
    uint32 id = 1;
    string country = 2;
    uint32 entityId = 3;
    string entityType = 4;
    string state = 5;
    string city = 6;
    string district = 7;
    string landmark = 8;
    string address = 9;
    double latitude = 10;
    double longitude = 11;
    int32 buildingNumber = 12;
    string pinCode = 13;
    bool exactLocation = 14;
    string createdAt = 15;
    string updatedAt = 16;
}

message RestaurantData {
    string name = 1;
    string phoneNumber = 2;
    string phoneNumberCountryCode = 3;
    string landlineNumber = 4;
    string landLineCode = 5;
    bool whatsAppNotifications = 6;
    int32 ownerId = 7;
    Address address = 8;
}

message CreateRestaurantRes{
    string message = 1;
    bool status = 2;
    Data data = 3;
    message Data {
        optional int32 id = 1;
    }    
}

message UpdateBasicDetailsReq {
    int32 id = 1;
    RestaurantData data = 2;
}

message GetRestaurantBasicDetailsReq {
    int32 id = 1;
    int32 ownerId = 2;
}

message RestaurantBasicDetails {
    string name = 1;
    string phoneNumber = 2;
    string phoneNumberCountryCode = 3;
    string landlineNumber = 4;
    string landLineCode = 5;
    bool whatsAppNotifications = 6;
    int32 ownerId = 7;
    Address address = 8;
    int32 id = 9;
}

message RestaurantTable {
    uint32 id = 1;
    string name = 2;
    uint32 ownerId = 3;
    string phoneNumber = 4;
    string phoneNumberCountryCode = 5;
    string landlineNumber = 6;
    string landlineCode = 7;
    int32 currentStep = 8;
    bool isPhoneVerified = 9;
    bool isLandlineVerified = 10;
    bool isVerified = 11;
    string status = 12;
    bool whatsAppNotifications = 13;
    repeated AddressTable address = 14;
    string createdAt = 15;
    string updatedAt = 16;
}

message GetRestaurantBasicDetailsRes {
    required string message = 1;
    required bool status = 2; 
    RestaurantTable data = 3;
}

message Shifts {
    string openingTime = 1;
    string closingTime =2;
}

message Timings {
    string day = 1;
    repeated Shifts shifts = 2;
}

message SaveRestaurantDetailsReq {
    int32 id = 1;
    int32 ownerId = 2;
    repeated int32 kitchenType = 3;
    repeated int32 outlets = 4;
    repeated int32 cuisines = 5;
    repeated Timings timings = 6;
}

message GetRestaurantDetailsReq {
    int32 id = 1;
    int32 ownerId = 2;
    bool timings = 3;
}

message GetRestaurantDetailsData {
    message RestaurantTimings {
        int32 id = 1;
        string createdAt = 2;
        string updatedAt = 3;
        bool is_active = 4;
        int32 restaurantId = 5;
        string day = 6;
        string openingTime = 7;
        string closingTime = 8;
    }

    int32 id = 1;
    string createdAt = 2;
    string updatedAt = 3;
    int32 restaurantId = 4;
    repeated int32 kitchenType = 5;
    repeated int32 outlets = 6;
    repeated int32 cuisines = 7;
    repeated RestaurantTimings timings = 8;
}

message GetRestaurantDetailsRes {
    required string message = 1;
    required bool status = 2; 
    GetRestaurantDetailsData data = 3;
}
